--- a/resources/less/columns.less
+++ b/resources/less/columns.less
@@ -2,11 +2,13 @@
 .a-col-tab-1, .a-col-tab-2, .a-col-tab-3, .a-col-tab-4, .a-col-tab-5, .a-col-tab-6, .a-col-tab-7, .a-col-tab-8, .a-col-tab-9, .a-col-tab-10, .a-col-tab-11, .a-col-tab-12,
 .a-col-des-1, .a-col-des-2, .a-col-des-3, .a-col-des-4, .a-col-des-5, .a-col-des-6, .a-col-des-7, .a-col-des-8, .a-col-des-9, .a-col-des-10, .a-col-des-11, .a-col-des-12,
 .a-col-ldes-1, .a-col-ldes-2, .a-col-ldes-3, .a-col-ldes-4, .a-col-ldes-5, .a-col-ldes-6, .a-col-ldes-7, .a-col-ldes-8, .a-col-ldes-9, .a-col-ldes-10, .a-col-ldes-11, .a-col-ldes-12 {
-  float: left;
   min-height: 1px;
   position: relative;
+  //padding: 0px 15px;
 }
-
+.a-col-mob-1, .a-col-mob-2, .a-col-mob-3, .a-col-mob-4, .a-col-mob-5, .a-col-mob-6, .a-col-mob-7, .a-col-mob-8, .a-col-mob-9, .a-col-mob-10, .a-col-mob-11, .a-col-mob-12 {
+  float: left;
+}
 .a-col-mob-12 {
   width: 100%;
 }
@@ -45,6 +47,9 @@
 }
 
 @media screen and (min-width: 768px) {
+  .a-col-tab-1, .a-col-tab-2, .a-col-tab-3, .a-col-tab-4, .a-col-tab-5, .a-col-tab-6, .a-col-tab-7, .a-col-tab-8, .a-col-tab-9, .a-col-tab-10, .a-col-tab-11, .a-col-tab-12 {
+    float: left;
+  }
   .a-col-tab-12 {
     width: 100%;
   }
@@ -84,6 +89,9 @@
 }
 
 @media screen and (min-width: 1024px) {
+  .a-col-des-1, .a-col-des-2, .a-col-des-3, .a-col-des-4, .a-col-des-5, .a-col-des-6, .a-col-des-7, .a-col-des-8, .a-col-des-9, .a-col-des-10, .a-col-des-11, .a-col-des-12 {
+    float: left;
+  }
   .a-col-des-12 {
     width: 100%;
   }
@@ -123,6 +131,9 @@
 }
 
 @media screen and (min-width: 1200px) {
+  .a-col-ldes-1, .a-col-ldes-2, .a-col-ldes-3, .a-col-ldes-4, .a-col-ldes-5, .a-col-ldes-6, .a-col-ldes-7, .a-col-ldes-8, .a-col-ldes-9, .a-col-ldes-10, .a-col-ldes-11, .a-col-ldes-12 {
+    float: left;
+  }
   .a-col-ldes-12 {
     width: 100%;
   }
